[fix] Remove scrollbar-gutter property from reset.css

--- a/next/app/styles/reset.css
+++ b/next/app/styles/reset.css
@@ -11,7 +11,6 @@
 :where(html) {
   -webkit-text-size-adjust: none;
   tab-size: 2;
-  scrollbar-gutter: stable;
 }
 :where(html:has(dialog:modal[open])) {
   overflow: clip;
